Implemented tests for both services, factory for ParcelLocker objects, and added a catch for empty lockers list in getRoute